(css) Fix menu visibility when printing an email
Fixes #3584

--- a/UI/WebServerResources/scss/core/print.scss
+++ b/UI/WebServerResources/scss/core/print.scss
@@ -8,6 +8,7 @@
   // Don't print some components
   md-sidenav,
   md-card-actions,
+  ._md-open-menu-container,
   .toolbar-main,
   .view-list,
   .sg-reversible.sg-flip .sg-face,
